[package]
name = "pqcrypto-falcon"
description = "Post-Quantum Signature Scheme falcon"
readme = "README.md"
version = "0.4.1"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rustpq/"
repository = "https://github.com/rustpq/pqcrypto/"
keywords = ["cryptography", "post-quantum", "security"]
categories = ["cryptography", "no-std"]

[dependencies]
pqcrypto-internals = { path = "../pqcrypto-internals", version = "0.2.6" }
pqcrypto-traits = { path = "../pqcrypto-traits", default-features = false }
libc = "0.2.177"
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde-big-array = { version = "0.5.1", optional = true }

[features]
default = ["avx2", "neon", "std"]
avx2 = ["std"]
neon = ["std"]
std = ["pqcrypto-traits/std"]
serialization = ["serde", "serde-big-array"]

[dev-dependencies]
rand = "0.9.2"

[build-dependencies]
cc = { version = "1.2.41", features = ["parallel"] }
glob = "0.3.3"

[badges]
travis-ci = { repository = "rustpq/pqcrypto", branch = "master" }
maintenance = { status = "actively-developed" }

